# Docker_Setup

./: .coverage  README.md  history.json  package.json  pyproject.toml
marketplace/: .coverage  README.md  conftest.py  db.sqlite3  pytest.ini
marketplace/conversation/: forms.py  models.py  urls.py  views.py
marketplace/conversation/migrations/: 0001_initial.py
marketplace/core/: forms.py  urls.py  views.py
marketplace/core/templates/: base.html
marketplace/core/tests/: test_forms.py
marketplace/dashboard/: urls.py  views.py
marketplace/item/: forms.py  models.py  urls.py  views.py
marketplace/item/migrations/: 0001_initial.py  0002_alter_category_options_item.py
marketplace/item/tests/: test_models.py  test_urls.py
marketplace/marketplace/: settings.py  urls.py
marketplace/tests/: test_core_urls.py
public/: index.html
py_api/: adder.c  hello.c  setup.py  spamC.c  spamH.h  spamPy.py
py_api/addList.egg-info/: SOURCES.txt
py_api/estimation/: Makefile  math.c  math.h  setup.py  test.py
py_api/hello/: Makefile
py_sql/: AST.py  README.rst  config.py  math_db.db
pytest-functions/: class_based.py  test_main.py  test_sample.py  test_time.py  time_total.py
src/: App.vue  router.js
src/components/: AddTodo.vue  Loader.vue  TodoItem.vue  TodoList.vue
src/views/: Home.vue  Todos.vue
weather_app/: base.py  config.py  exceptions.py  gps_coordinates.py  history.py  weather.py  weather_api_service.py
weather_app/tests/: test_base.py  test_config.py  test_gps_coordinates.py  test_history.py  test_weather_api_service.py
(+11 files in other folders)
