[tool.poetry]
name = "python_tests"
version = "0.1.0"
description = ""
authors = ["David2261 <bulatnasirov2003@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
geocoder = "^1.38.1"
mypy = "^0.971"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
loguru = "^0.6.0"
Django = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
